force-app/main/default/objects/GetsAsia_Callout__mdt/GetsAsia_Callout__mdt.object-meta.xml
<CustomObject>
    <label>GetsAsia Callout</label>
    <pluralLabel>GetsAsia Callouts</pluralLabel>
</CustomObject>