force-app/main/default/objects/GetsAsia_Callout__mdt/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <label>Doc Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>