force-app/main/default/objects/GetsAsia_Callout__mdt/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>