force-app/main/default/objects/GetsAsia_Callout__mdt/fields/Route_Id__c.field-meta.xml
<CustomField>
    <fullName>Route_Id__c</fullName>
    <label>Route Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>