force-app/main/default/objects/GetsAsia_Callout__mdt/listViews/Show_all_fields.listView-meta.xml
<ListView>
    <fullName>Show_all_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Doc_Type__c</columns>
    <columns>Message_Type__c</columns>
    <columns>Route_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Show all fields</label>
</ListView>